feat: addedd mockito to pom